--- a/index.css
+++ b/index.css
@@ -83,6 +83,36 @@ main {
   font-size: 25px;
   margin-top: 10px;
 }
+
+.wheather-app-forcast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+.wheather-forcast-day {
+  text-align: center;
+  color: grey;
+  font-size: 16px;
+  line-height: 20%;
+  margin-bottom: 10px;
+}
+
+.wheather-forcast-icon {
+  text-align: center;
+  font-size: 40px;
+}
+
+.wheather-forcast-temps {
+  color: rgb(249, 45, 229);
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.wheather-forcast-temp {
+  padding: 0 10px;
+}
 footer {
   padding: 10px 5px;
   text-align: center;
